style changes for contrast issues, tries to add pagination component with titles for buttons

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -13,6 +13,10 @@ body {
   overflow-y: hidden !important;
 }
 
+a {
+  color: #0f4d90;
+}
+
 #app {
   height: 100dvh;
   display: flex;
